package com.xbank.opf.sdk;

public class WorkflowWatcher {

    /**
     * Polls the Nebras Agentive Platform to determine if a Human-in-the-Loop
     * or complex background workflow has completed processing an intent.
     */
    public String waitForCompletion(String intentId) {
        System.out.println("Beginning async polling for Intent ID: " + intentId);
        
        // Mock polling logic
        try {
            for (int i = 0; i < 3; i++) {
                System.out.println("Status: PENDING_AGENT_REASONING...");
                Thread.sleep(1000);
            }
        } catch (InterruptedException e) {
            Thread.currentThread().interrupt();
        }
        
        return "COMPLETED_SUCCESSFULLY";
    }
}
